# neuromem_runtime

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: api.md
src/neuromem/: __init__.py
src/neuromem/adapters/: __init__.py
src/neuromem/core/: __init__.py  deltas.py  models.py  policy.py  runtime.py  validator.py
src/neuromem/evals/: __init__.py  bench.py  experiment.py  external.py  framework.py  gated_recall.py  lme_v2_scoring.py  run_bench.py  run_experiment.py
src/neuromem/langgraph_runtime/: __init__.py  graph.py  pfc.py
src/neuromem/modules/: __init__.py  consolidation.py  explainer.py  forgetting.py  layers.py  lifecycle.py  memory_tap.py  pfc_controller.py  plasticity.py  reconsolidation.py  salience.py  tag_capture.py  working_memory.py
src/neuromem/retrieval/: __init__.py  activation.py  hybrid.py  recall.py
src/neuromem/server/: __init__.py  app.py
src/neuromem/stores/: __init__.py  base.py  memory_store.py  sqlite_store.py
src/neuromem_runtime/: __init__.py  claims.py  cli.py  crystallization.py  deltas.py  evaluation.py  executor.py  impact.py  ledger.py  lifecycle.py  materializer.py  performance.py  plasticity.py  policy_v2.py  providers.py  retrieval.py  runtime.py  semantic_graph.py  sleep.py  sync.py  types.py  validators.py  worldview.py
src/neuromem_runtime/langgraph/: __init__.py
tests/: test_activation_retrieval.py  test_append_only_worldview_runtime.py  test_cli.py  test_governance_closure.py  test_governed_runtime_surfaces.py  test_progressive_crystallization.py  test_providers.py  test_runtime_facade.py  test_semantic_governed_graph.py
