[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuromem-runtime"
version = "0.2.0"
description = "A local-first Memory Mutation Runtime facade for governed long-term agent memory."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Andy Zhang" }]
keywords = ["agent-memory", "langgraph", "llm", "memory", "runtime"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = ["pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
langgraph = ["langgraph>=0.2.0", "requests>=2.31.0"]
providers = ["requests>=2.31.0"]
retrieval = []
rerank = []
llm-rerank = ["requests>=2.31.0"]
eval = []
eval-real = ["mem0ai>=0.1.0", "langmem>=0.0.20", "langchain-openai>=0.2.0", "spacy>=3.7.0", "fastembed>=0.4.0"]

[project.urls]
Homepage = "https://github.com/andyzpb/neuromem_runtime"
Repository = "https://github.com/andyzpb/neuromem_runtime"
Issues = "https://github.com/andyzpb/neuromem_runtime/issues"

[project.scripts]
nmem = "neuromem_runtime.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neuromem_runtime = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-m", "not integration"]
markers = [
  "integration: tests that require network access or optional providers",
]
